--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Бесплатный Bitcoin каждые 60 минут | FreeBTC</title>
+  <meta name="description" content="Зарабатывай бесплатный Bitcoin каждые 60 минут, участвуй в еженедельной и эксклюзивной лотереях, получай бонус 50% рефералам каждую неделю.">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -55,9 +56,9 @@
   <!-- Калькулятор дохода -->
   <section class="calculator">
     <h2>Рассчитай свой доход</h2>
-    <label>Сколько друзей пригласишь?</label>
+    <label for="friends">Сколько друзей пригласишь?</label>
     <input type="number" id="friends" min="1" value="10">
-    <label>Среднее количество их ставок в день:</label>
+    <label for="bets">Среднее количество их ставок в день:</label>
     <input type="number" id="bets" min="1" value="5">
     <p>Твой доход за месяц: <span id="income">0.00000000 BTC</span></p>
   </section>
@@ -119,3 +120,4 @@
   <script src="js/main.js"></script>
 </body>
 </html>
+
