--- a/cookies.html
+++ b/cookies.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Очистка cookies перед регистрацией | FreeBTC</title>
+  <meta name="description" content="Перед регистрацией на FreeBTC очистите cookies, чтобы бонус засчитался. Мои рефералы получают 50% от моей прибыли каждую неделю.">
   <link rel="stylesheet" href="css/cookies.css">
 </head>
 <body class="cookies-page">
@@ -24,7 +25,7 @@
       <li><b>Мобильные браузеры:</b> Настройки → Конфиденциальность → Очистка истории и данных сайтов.</li>
     </ul>
 
-    <label class="checkbox-label">
+    <label for="cookies-confirm" class="checkbox-label">
       <input type="checkbox" id="cookies-confirm">
       Я очистил cookies
     </label>
@@ -80,3 +81,4 @@
 
 </body>
 </html>
+
