--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Бесплатный Bitcoin каждые 60 минут | FreeBTC</title>
   <meta name="description" content="Зарабатывай бесплатный Bitcoin каждые 60 минут, участвуй в еженедельной и эксклюзивной лотереях, получай бонус 50% рефералам каждую неделю.">
+  <link rel="canonical" href="https://dexhtml.github.io/freebtc-landing/">
+  <meta name="google-site-verification" content="PASTE_GOOGLE_TOKEN_HERE">
+  <meta name="yandex-verification" content="PASTE_YANDEX_TOKEN_HERE">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -120,4 +123,5 @@
   <script src="js/main.js"></script>
 </body>
 </html>
+
 
