--- a/index.html
+++ b/index.html
@@ -120,8 +120,9 @@
     <a href="cookies.html" class="cta-btn">Регистрация</a>
   </section>
 
-  <script src="js/main.js"></script>
+  <script src="js/main.js" defer></script>
 </body>
 </html>
+
 
 
