--- a/cookies.html
+++ b/cookies.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Очистка cookies перед регистрацией | FreeBTC</title>
   <meta name="description" content="Перед регистрацией на FreeBTC очистите cookies, чтобы бонус засчитался. Мои рефералы получают 50% от моей прибыли каждую неделю.">
+  <link rel="canonical" href="https://dexhtml.github.io/freebtc-landing/cookies.html">
+  <meta name="google-site-verification" content="PASTE_GOOGLE_TOKEN_HERE">
+  <meta name="yandex-verification" content="PASTE_YANDEX_TOKEN_HERE">
   <link rel="stylesheet" href="css/cookies.css">
 </head>
 <body class="cookies-page">
@@ -35,7 +38,7 @@
     </a>
   </section>
 
-  <script>
+  <script defer>
     const checkbox = document.getElementById('cookies-confirm');
     const registerBtn = document.getElementById('go-register');
 
@@ -81,4 +84,5 @@
 
 </body>
 </html>
+
 
