--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Бесплатный Bitcoin каждые 60 минут | FreeBTC</title>
   <meta name="description" content="Зарабатывай бесплатный Bitcoin каждые 60 минут, участвуй в еженедельной и эксклюзивной лотереях, получай бонус 50% рефералам каждую неделю.">
   <link rel="canonical" href="https://dexhtml.github.io/freebtc-landing/">
-  <meta name="google-site-verification" content="PASTE_GOOGLE_TOKEN_HERE">
+  <meta name="google-site-verification" content="<meta name="C7LvMbo2dr_YFMWxM72BmzjOFAYQYgQOcvrgaIO3Spo">
   <meta name="yandex-verification" content="PASTE_YANDEX_TOKEN_HERE">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -123,6 +123,7 @@
   <script src="js/main.js" defer></script>
 </body>
 </html>
+
 
 
 
