--- a/cookies.html
+++ b/cookies.html
@@ -6,7 +6,7 @@
   <title>Очистка cookies перед регистрацией | FreeBTC</title>
   <meta name="description" content="Перед регистрацией на FreeBTC очистите cookies, чтобы бонус засчитался. Мои рефералы получают 50% от моей прибыли каждую неделю.">
   <link rel="canonical" href="https://dexhtml.github.io/freebtc-landing/cookies.html">
-  <meta name="google-site-verification" content="PASTE_GOOGLE_TOKEN_HERE">
+  <meta name="google-site-verification" content="<meta name="C7LvMbo2dr_YFMWxM72BmzjOFAYQYgQOcvrgaIO3Spo">
   <meta name="yandex-verification" content="PASTE_YANDEX_TOKEN_HERE">
   <link rel="stylesheet" href="css/cookies.css">
 </head>
@@ -84,5 +84,6 @@
 
 </body>
 </html>
+
 
 
