--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Зарабатывай бесплатный Bitcoin каждые 60 минут, участвуй в еженедельной и эксклюзивной лотереях, получай бонус 50% рефералам каждую неделю.">
   <link rel="canonical" href="https://dexhtml.github.io/freebtc-landing/">
   <meta name="google-site-verification" content="C7LvMbo2dr_YFMWxM72BmzjOFAYQYgQOcvrgaIO3Spo">
-  <meta name="yandex-verification" content="PASTE_YANDEX_TOKEN_HERE">
+  <meta name="yandex-verification" content="4f98e669bef52c36">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -123,6 +123,7 @@
   <script src="js/main.js" defer></script>
 </body>
 </html>
+
 
 
 
