--- a/cookies.html
+++ b/cookies.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Перед регистрацией на FreeBTC очистите cookies, чтобы бонус засчитался. Мои рефералы получают 50% от моей прибыли каждую неделю.">
   <link rel="canonical" href="https://dexhtml.github.io/freebtc-landing/cookies.html">
   <meta name="google-site-verification" content="C7LvMbo2dr_YFMWxM72BmzjOFAYQYgQOcvrgaIO3Spo">
-  <meta name="yandex-verification" content="PASTE_YANDEX_TOKEN_HERE">
+  <meta name="yandex-verification" content="4f98e669bef52c36">
   <link rel="stylesheet" href="css/cookies.css">
 </head>
 <body class="cookies-page">
@@ -84,6 +84,7 @@
 
 </body>
 </html>
+
 
 
 
