--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Бесплатный Bitcoin каждые 60 минут | FreeBTC</title>
-  <meta name="description" content="Зарабатывай бесплатный Bitcoin каждые 60 минут, участвуй в еженедельной и эксклюзивной лотереях, получай бонус 50% рефералам каждую неделю.">
+  <title>Заработать Bitcoin бесплатно каждые 60 минут | Лотереи, бонусы, игра HI‑LO</title>
+  <meta name="description" content="Получай бесплатный Bitcoin каждые 60 минут! Играй в HI‑LO, участвуй в еженедельных и золотых лотереях, забирай 50% бонус рефералам.">
   <link rel="canonical" href="https://dexhtml.github.io/freebtc-landing/">
+
+  <meta property="og:title" content="Заработать Bitcoin бесплатно — каждые 60 минут">
+  <meta property="og:description" content="Играй, получай бонусы и участвуй в розыгрышах BTC без вложений.">
+  <meta property="og:image" content="https://dexhtml.github.io/freebtc-landing/images/preview.jpg">
+  <meta property="og:url" content="https://dexhtml.github.io/freebtc-landing/">
+  <meta property="og:type" content="website">
+  
   <meta name="google-site-verification" content="C7LvMbo2dr_YFMWxM72BmzjOFAYQYgQOcvrgaIO3Spo">
   <meta name="yandex-verification" content="4f98e669bef52c36">
   <link rel="stylesheet" href="css/style.css">
@@ -15,8 +22,8 @@
   <!-- HERO -->
   <header class="hero">
     <div class="overlay">
-      <h1>Зарабатывай Bitcoin бесплатно — каждые 60 минут</h1>
-      <p>Играй, получай бонусы и участвуй в розыгрышах с гарантией честности</p>
+      <h1>Заработать Bitcoin бесплатно — каждые 60 минут</h1>
+      <p>Играй, получай бонусы за участие и развивайся с уровнем честности</p>
       <a href="cookies.html" class="cta-btn">Начать сейчас</a>
       <p class="note">Следующая выдача сатоши через: <span id="timer">59:59</span></p>
     </div>
@@ -24,7 +31,7 @@
 
   <!-- Демо HI‑LO -->
   <section class="game-demo">
-    <h2>Попробуй демо-игру HI‑LO</h2>
+    <h2>Как работает бесплатная выдача Bitcoin</h2>
     <div class="hi-lo-box">
       <p id="roll-result">🎲 0000</p>
       <button id="roll-btn">Сделать бросок</button>
@@ -41,24 +48,24 @@
     </div>
     <div>
       <span>🎫</span>
-      <h3>Лотерейный билет</h3>
-      <p>Участие в еженедельной лотерее</p>
+      <h3>Лотерея и бонусы для участников</h3>
+      <p>Участвуй в еженедельной лотерее Bitcoin</p>
     </div>
     <div>
       <span>🥇</span>
-      <h3>Золотой билет</h3>
-      <p>Шанс выиграть Lamborghini</p>
+      <h3>Золотой билет Bitcoin</h3>
+      <p>Шанс выиграть Lamborghini или $200,000 в BTC</p>
     </div>
     <div>
       <span>💰</span>
-      <h3>50% бонус каждую неделю</h3>
+      <h3>Реферальная программа — 50% каждую неделю</h3>
       <p>Мои рефералы получают половину от моей прибыли за них</p>
     </div>
   </section>
 
   <!-- Калькулятор дохода -->
   <section class="calculator">
-    <h2>Рассчитай свой доход</h2>
+    <h2>Калькулятор дохода Bitcoin крана</h2>
     <label for="friends">Сколько друзей пригласишь?</label>
     <input type="number" id="friends" min="1" value="10">
     <label for="bets">Среднее количество их ставок в день:</label>
@@ -68,7 +75,7 @@
 
   <!-- Еженедельная лотерея -->
   <section class="lottery">
-    <h2>Еженедельная лотерея</h2>
+    <h2>Еженедельная лотерея криптовалют</h2>
     <p>Каждое воскресенье разыгрываются призы среди владельцев лотерейных билетов</p>
     <ul>
       <li>1 место: ₿ 0.00746758</li>
@@ -81,7 +88,7 @@
 
   <!-- Розыгрыш Lamborghini -->
   <section class="lambo">
-    <h2>Розыгрыш Lamborghini</h2>
+    <h2>Золотой билет биткоин розыгрыш Lamborghini</h2>
     <p>Собери золотые билеты и участвуй в главном призе — Lamborghini или $200,000 в BTC</p>
     <p>До конца розыгрыша: <span id="lambo-timer"></span></p>
   </section>
@@ -120,9 +127,23 @@
     <a href="cookies.html" class="cta-btn">Регистрация</a>
   </section>
 
+  <!-- FAQ -->
+  <section class="faq">
+    <h2>Частые вопросы</h2>
+    <div>
+      <h3>Как получить бесплатный Bitcoin каждые 60 минут</h3>
+      <p>Зарегистрируйтесь, заходите каждый час и запускайте розыгрыш сатоши без вложений.</p>
+    </div>
+    <div>
+      <h3>Что за бонус 50% рефералам</h3>
+      <p>Каждое воскресенье мы начисляем половину своей прибыли от приглашённых друзей.</p>
+    </div>
+  </section>
+
   <script src="js/main.js" defer></script>
 </body>
 </html>
+
 
 
 
