--- a/cookies.html
+++ b/cookies.html
@@ -3,9 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Очистка cookies перед регистрацией | FreeBTC</title>
-  <meta name="description" content="Перед регистрацией на FreeBTC очистите cookies, чтобы бонус засчитался. Мои рефералы получают 50% от моей прибыли каждую неделю.">
+  <title>Очистка cookies перед регистрацией | Бесплатный Bitcoin бонус</title>
+  <meta name="description" content="Перед регистрацией на FreeBTC очистите cookies, чтобы бонус засчитался. Получайте бесплатный Bitcoin каждые 60 минут и 50% бонус рефералам.">
   <link rel="canonical" href="https://dexhtml.github.io/freebtc-landing/cookies.html">
+
+  <meta property="og:title" content="Очистка cookies перед регистрацией | FreeBTC">
+  <meta property="og:description" content="Очистите cookies, чтобы получить бонус и участвовать в розыгрышах Bitcoin.">
+  <meta property="og:image" content="https://dexhtml.github.io/freebtc-landing/images/preview.jpg">
+  <meta property="og:url" content="https://dexhtml.github.io/freebtc-landing/cookies.html">
+  <meta property="og:type" content="website">
+  
   <meta name="google-site-verification" content="C7LvMbo2dr_YFMWxM72BmzjOFAYQYgQOcvrgaIO3Spo">
   <meta name="yandex-verification" content="4f98e669bef52c36">
   <link rel="stylesheet" href="css/cookies.css">
@@ -36,6 +43,18 @@
     <a href="https://freebitco.in/?r=4967787" id="go-register" class="cta-btn animated-btn">
       ✅ Перейти к регистрации
     </a>
+  </section>
+
+  <section class="faq">
+    <h2>Частые вопросы</h2>
+    <div>
+      <h3>Зачем очищать cookies перед регистрацией?</h3>
+      <p>Чтобы система точно засчитала регистрацию по вашей реферальной ссылке и начислила бонусы.</p>
+    </div>
+    <div>
+      <h3>Что будет, если не очистить cookies?</h3>
+      <p>Регистрация может не отобразиться, и бонусы не будут начислены.</p>
+    </div>
   </section>
 
   <script defer>
@@ -84,6 +103,7 @@
 
 </body>
 </html>
+
 
 
 
